--- a/public/index.html
+++ b/public/index.html
@@ -14,8 +14,8 @@
 
     <div class="flex-container">
         <div></div>
-        <a href="http://localhost:3000/greet?name=user&year=2000">greetings<br></a>
-        <a href="http://localhost:3000/math/2/plus/2">do math</a>
+        <a href="http://localhost:3000/greet?name=j+doe&year=2000">greetings<br></a>
+        <a href="http://localhost:3000/math/9/times/5">do math</a>
         <div></div>
     </div>
 </body>
