Add static info page
"info"

--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,8 @@
         <a href="http://localhost:3000/math/9/times/5">do math</a>
         <div></div>
     </div>
+
+    <div class="info"><a href="info.jpg">info</a></div>
 </body>
 
 </html>
